# auric

./: .pre-commit-config.yaml  .prospector.yaml  .skjoldignore  LICENSE  README.md  pull_request_template.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
requirements/: requirements-dev.txt
scripts/: post_install.sh
src/auric/: __init__.py  valid_values.py
tests/: test_url.py
