[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.skjold]
report_only = false
report_format = 'cli'
sources = ["pypa"]
cache_expires = 43200
ignore_file = ".skjoldignore"
verbose = false
