[metadata]
name = auric
version = 0.0.1
author = auric development team
author_email = auric@gmail.com
description = Utility to help manage URLs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pwrhodes/auric
keywords = url,uri
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    License :: Other/Proprietary License
    Development Status :: 1 - Planning
    Operating System :: OS Independent
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires=


[options.packages.find]
where = src
[options.package_data]
auric = py.typed
